--- a/JiaoBaoYun-hb/html/mine/qun_manage_data_main.html
+++ b/JiaoBaoYun-hb/html/mine/qun_manage_data_main.html
@@ -12,10 +12,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
-
 		<link rel="stylesheet" href="../../css/mui.min.css">
 		<link rel="stylesheet" href="../../css/utils/common.css" />
-
 	</head>
 
 	<body>
@@ -45,18 +43,19 @@
 		});
 
 		mui.plusReady(function() {
+			events.closeWaiting();
 			var wd = events.showWaiting();
 			//---获取数据并传递数据---start---
 			var main = plus.webview.currentWebview(); //获取当前窗体对象
 			var data = main.data; //接收A页面传入参数值
 			console.log('qun_manage_member_main.html:' + JSON.stringify(data));
 			document.getElementById("title").innerText = data.gname + '人员资料';
-
 			//创建子页面
-			events.createSubAppendMain(main, 'qun_manage_data_sub.html', data, function() {
+			events.createSubAppendMain(main, 'qun_manage_data_sub.html', data, function(sub) {
 				setTimeout(function() {
 					wd.close();
 				}, 250);
+				events.changeTopPocket();
 			});
 
 			//---获取数据并传递数据---end---
@@ -69,6 +68,7 @@
 				}
 				events.openNewWindowWithData('qun_data_create.html', passData);
 			});
+
 		});
 	</script>
 
