求知主页显示

--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi_home.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi_home.html
@@ -13,7 +13,7 @@
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/utils/common.css" rel="stylesheet" />
 		<link href="../../css/iconfont/iconfont.css" rel="stylesheet"/>
-		<!--<link href="../../css/qiuzhi/qiuzhi.css" rel="stylesheet" />-->
+		<link href="../../css/qiuzhi/qiuzhi.css" rel="stylesheet" />
 	</head>
 
 	<body>
@@ -36,7 +36,7 @@
 		<script src="../../js/utils/events.js"></script>
 		<script src="../../js/publicProtocol.js"></script>
 		<script src="../../js/publicQiuzhiProtocol.js"></script>
-		<!--<script src="../../js/qiuzhi/qiuzhi-home.js"></script>-->
+		<script src="../../js/qiuzhi/qiuzhi-home.js"></script>
 	</body>
 
 </html>
