--- a/JiaoBaoYun-hb/html/mine/qun_data_details.html
+++ b/JiaoBaoYun-hb/html/mine/qun_data_details.html
@@ -110,13 +110,13 @@
 								<input id="stu_ugname" type="text" class="mui-input-clear" disabled>
 							</div>
 						</li>
-						<li class="mui-table-view-cell">
+						<li class="mui-table-view-cell" style="display: none;">
 							<div class="mui-input-row">
 								<label>所属群:</label>
 								<input id="stu_gname" type="text" class="mui-input-clear" disabled>
 							</div>
 						</li>
-						<li class="mui-table-view-cell">
+						<li class="mui-table-view-cell" style="display: none;">
 							<div class="mui-input-row">
 								<label>简介:</label>
 								<!--<input id="stu_introduction" type="text" class="mui-input-clear" disabled>-->
@@ -156,7 +156,7 @@
 								<div id="tea_gender" class="gender"></div>
 							</div>
 						</li>
-						<li class="mui-table-view-cell">
+						<li class="mui-table-view-cell" style="display: none;">
 							<div class="mui-input-row">
 								<label>所属群:</label>
 								<input id="tea_gname" type="text" class="mui-input-clear" disabled>
@@ -186,7 +186,7 @@
 								<input id="tea_expsch" type="number" oninput="if(value.length>10)value=value.slice(0,10)" class="mui-input-clear" value="">
 							</div>
 						</li>
-						<li class="mui-table-view-cell">
+						<li class="mui-table-view-cell" style="display: none;">
 							<div class="mui-input-row">
 								<label>简介:</label>
 								<!--<input id="tea_introduction" type="text" class="mui-input-clear" disabled>-->
