--- a/JiaoBaoYun-hb/html/cloud/cloud_home.html
+++ b/JiaoBaoYun-hb/html/cloud/cloud_home.html
@@ -355,7 +355,11 @@
 						}
 					}, 'div');
 					document.querySelector('.mui-popup-input input').type = 'text';
-					document.querySelector('.mui-popup-input input').maxLength = '20';
+					document.querySelector('.mui-popup-input input').addEventListener('input', function() {
+						if(this.value.length > 20) {
+							this.value = this.value.slice(0, 20);
+						}
+					});
 				});
 
 				//---云盘end---
