--- a/JiaoBaoYun-hb/html/cloud/storage_main.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_main.html
@@ -318,7 +318,11 @@
 						}
 					}, 'div');
 					document.querySelector('.mui-popup-input input').type = 'text';
-					document.querySelector('.mui-popup-input input').maxLength = '20';
+					document.querySelector('.mui-popup-input input').addEventListener('input', function() {
+						if(this.value.length > 20) {
+							this.value = this.value.slice(0, 20);
+						}
+					});
 				});
 
 				//返回按钮监听
@@ -478,7 +482,11 @@
 						}
 					}, 'div');
 					document.querySelector('.mui-popup-input input').type = 'text';
-					document.querySelector('.mui-popup-input input').maxLength = '20';
+					document.querySelector('.mui-popup-input input').addEventListener('input', function() {
+						if(this.value.length > 20) {
+							this.value = this.value.slice(0, 20);
+						}
+					});
 				});
 
 				/**
