修改输入的字数限制，修改多次点击提交按钮

--- a/JiaoBaoYun-hb/html/cloud/app_notes_sub.html
+++ b/JiaoBaoYun-hb/html/cloud/app_notes_sub.html
@@ -212,7 +212,7 @@
 						events.openNewWindow('app_notes_create.html');
 					});
 
-					window.addEventListener('refresh',function () {
+					window.addEventListener('refreshView',function () {
 					       pulldownRefresh();
 					});
 					mui('.mui-content').on('tap','.mui-media-body',function(){
