--- a/JiaoBaoYun-hb/html/cloud/cloud_home.html
+++ b/JiaoBaoYun-hb/html/cloud/cloud_home.html
@@ -374,6 +374,7 @@
 							type: '1' //0群管理,1人员资料
 						});
 						//events.openNewWindow('/html/mine/qun_manage.html');
+						//events.openNewWindow('/html/mine/qun_data.html');
 					} else { //学生
 						console.log('学生');
 						var index = this.id.replace('studentsdynamic', '');
