--- a/JiaoBaoYun-hb/html/cloud/record_student_sub.html
+++ b/JiaoBaoYun-hb/html/cloud/record_student_sub.html
@@ -202,6 +202,11 @@
 				};
 				//请求数据
 				requestData(comData);
+
+				//下拉刷新的监听
+				window.addEventListener('refreshView',function () {
+				        pulldownRefresh();
+				});
 			});
 
 			/**
