--- a/JiaoBaoYun-hb/html/mine/qun_manage.html
+++ b/JiaoBaoYun-hb/html/mine/qun_manage.html
@@ -394,7 +394,7 @@
 					//---获取群数据---end---
 
 					//刷新界面的监听
-					window.addEventListener('refresh', function() {
+					window.addEventListener('refreshView', function() {
 						document.getElementById("qunlist").innerHTML = '\
 						<a id="controladd" class="mui-control-item" style="width: 40px;">\
 						</a>\
