--- a/JiaoBaoYun-hb/html/mine/qun_manage_info.html
+++ b/JiaoBaoYun-hb/html/mine/qun_manage_info.html
@@ -301,7 +301,7 @@
 				 */
 				function changInfo(data) {
 					events.fireToPageWithData('qun_manage_sub.html', 'createQun', data);
-					events.fireToPageNone('/html/mine/qun_data.html', 'refresh');
+					events.fireToPageNone('/html/mine/qun_data.html', 'refreshView');
 					events.fireToPageNone('../cloud/cloud_home.html', 'infoChanged');
 				}
 
