--- a/JiaoBaoYun-hb/html/mine/qun_data.html
+++ b/JiaoBaoYun-hb/html/mine/qun_data.html
@@ -365,7 +365,7 @@
 					//---获取群数据---end---
 
 					//刷新界面
-					window.addEventListener('refresh', function() {
+					window.addEventListener('refreshView', function() {
 						document.getElementById("qunlist").innerHTML = '\
 						<a id="controladd" class="mui-control-item" style="width: 40px;">\
 						</a>\
