--- a/JiaoBaoYun-hb/html/cloud/storage_transport.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_transport.html
@@ -288,7 +288,7 @@
 				var downloading = false; //是否正在上传
 				var upFolderEntry = null; //上传文件夹的目录对象
 				var downFolderEntry = null; //下载文件夹的目录对象
-//				console.log('传输列表');
+				//				console.log('传输列表');
 				document.querySelector("#slider").style.top = (localStorage.getItem('StatusHeightNo') * 1 + 45) + 'px';
 
 				//---滑动start---
@@ -714,8 +714,7 @@
 						plus.nativeUI.closeWaiting();
 						CloudFileUtil.download(data, filename, function(download, status) {
 							//下载任务完成的监听
-							mui.toast('下载任务完成');
-							console.log('下载任务完成:' + JSON.stringify(download));
+							console.log('下载任务完成' + status + '|' + JSON.stringify(download));
 							downloading = false;
 							//删除对应的任务
 							mui.each(downloadList, function(index, element) {
@@ -734,11 +733,16 @@
 							});
 							document.getElementById("down_btn_" + download.id).style.display = 'none';
 							document.getElementById("down_" + download.id).parentNode.removeChild(document.getElementById("down_" + download.id));
-							plus.io.resolveLocalFileSystemURL(fpath, function(succesCB) {
-								addUpedOrDownedMetadataItem(0, succesCB);
-							}, function(errorCB) {
-								console.log("请求上传或者下载文件系统失败: " + JSON.stringify(errorCB));
-							});
+							if(status == 200) {
+								mui.toast('下载成功');
+								plus.io.resolveLocalFileSystemURL(fpath, function(succesCB) {
+									addUpedOrDownedMetadataItem(0, succesCB);
+								}, function(errorCB) {
+									console.log("请求上传或者下载文件系统失败: " + JSON.stringify(errorCB));
+								});
+							} else {
+								mui.toast('下载失败:' + status + ' ' + download.responseText);
+							}
 
 						}, function(download, status) {
 							//下载任务状态监听
@@ -844,36 +848,52 @@
 						plus.nativeUI.closeWaiting();
 						CloudFileUtil.upload(fPath, QNUptoken, QNFileName, function(upload, status) {
 							//上传任务完成的监听
-							console.log('上传任务完成');
+							console.log('上传任务完成' + status + '|' + JSON.stringify(upload));
 							uploading = false;
-							var fnameList = fname.split('.');
-							var name = '';
-							var type = '';
-							if(fnameList.length == 1) {
-								name = fname;
-								type = '';
-							} else {
-								type = '.' + fnameList[fnameList.length - 1];
-								name = fname.substring(0, (fname.length * 1 - type.length * 1));
-							}
-							var comData = {
-								pid: pid, //父ID，该文件的上层ID
-								fname: name, //文件名称，文件或文件夹名称,文件存扩展名之前的名称
-								ftype: type, //文件类型，存文件的扩展名,如.file为文件夹
-								fpath: window.storageKeyName.QNFILEDOMAIN + QNFileName, //文件路径，文件路径,为文件用
-								fsize: upload.totalSize //文件大小，文件用
-							};
-							//删除对应的任务
-							mui.each(uploadList, function(index, element) {
-								if(element.id == upload.id) {
-									uploadList.splice(index, 1);
-									return false;
+							if(status == 200) {
+								var fnameList = fname.split('.');
+								var name = '';
+								var type = '';
+								if(fnameList.length == 1) {
+									name = fname;
+									type = '';
+								} else {
+									type = '.' + fnameList[fnameList.length - 1];
+									name = fname.substring(0, (fname.length * 1 - type.length * 1));
 								}
-							});
-							document.getElementById("up_btn_" + upload.__UUID__).style.display = 'none';
-							document.getElementById("up_" + upload.__UUID__).parentNode.removeChild(document.getElementById("up_" + upload.__UUID__));
-							addFile(comData, fPath, fname);
+								var comData = {
+									pid: pid, //父ID，该文件的上层ID
+									fname: name, //文件名称，文件或文件夹名称,文件存扩展名之前的名称
+									ftype: type, //文件类型，存文件的扩展名,如.file为文件夹
+									fpath: window.storageKeyName.QNFILEDOMAIN + QNFileName, //文件路径，文件路径,为文件用
+									fsize: upload.totalSize //文件大小，文件用
+								};
+								//删除对应的任务
+								mui.each(uploadList, function(index, element) {
+									if(element.id == upload.id) {
+										uploadList.splice(index, 1);
+										return false;
+									}
+								});
+								document.getElementById("up_btn_" + upload.__UUID__).style.display = 'none';
+								document.getElementById("up_" + upload.__UUID__).parentNode.removeChild(document.getElementById("up_" + upload.__UUID__));
+								addFile(comData, fPath, fname);
+							} else {
+								mui.each(uploadList, function(index, element) {
+									if(element.id == upload.id) {
+										uploadList.splice(index, 1);
+										return false;
+									}
+								});
+								document.getElementById("up_btn_" + upload.__UUID__).style.display = 'none';
+								//document.getElementById("up_" + upload.__UUID__).parentNode.removeChild(document.getElementById("up_" + upload.__UUID__));
+								document.getElementById("up_waiting_" + upload.__UUID__).innerText = '上传失败';
+								document.getElementById("up_waiting_" + upload.__UUID__).style.display = 'inline';
+								mui.toast('上传失败:' + status + ' ' + upload.responseText);
+							}
+
 						}, function(upload, status) {
+
 							//上传任务状态监听
 							//上传任务的标识
 							var id = upload.__UUID__;
@@ -1249,7 +1269,7 @@
 				 * @param {Object} datetime
 				 */
 				function dateToStr(datetime) {
-					console.log(datetime);
+					//console.log(datetime);
 					var year = datetime.getFullYear(),
 						month = datetime.getMonth() + 1,
 						date = datetime.getDate(),
