--- a/JiaoBaoYun-hb/html/mine/qun_manage_main.html
+++ b/JiaoBaoYun-hb/html/mine/qun_manage_main.html
@@ -51,6 +51,7 @@
 					setTimeout(function() {
 						wd.close();
 					}, 250);
+					events.changeTopPocket();
 				});
 
 				//---获取数据并传递数据---end---
