--- a/JiaoBaoYun-hb/html/quan/studentdynamic_main.html
+++ b/JiaoBaoYun-hb/html/quan/studentdynamic_main.html
@@ -66,15 +66,13 @@
 			console.log('main-data:' + JSON.stringify(data));
 
 			document.getElementById("title").innerText = data.studentName;
+
 			//创建子页面
-			var sub = plus.webview.create('studentdynamic_sub.html', 'studentdynamic_sub.html', {
-				top: (localStorage.getItem('StatusHeightNo') * 1 + 45) + 'px',
-				bottom:'0px'
-			}, {
-				data: data
-			});
-			sub.addEventListener('loaded', function() {
-				main.append(sub);
+			events.createSubAppendMain(main, 'studentdynamic_sub.html', data, function(sub) {
+				setTimeout(function() {
+					wd.close();
+				}, 250);
+				events.changeTopPocket();
 			});
 			//---获取数据并传递数据---end---
 
