--- a/JiaoBaoYun-hb/html/quan/zonep_sub.html
+++ b/JiaoBaoYun-hb/html/quan/zonep_sub.html
@@ -482,7 +482,7 @@
 							console.log('index=' + index)
 							var a = document.getElementById("praise" + index);
 							a.style.color = 'rgb(0, 165, 224)'
-							mui.toast('点赞成功');
+//							mui.toast('点赞成功');
 							var PraiseList = document.getElementById("PraiseList" + index);
 							console.log(PraiseList.innerHTML);
 							var praiseNameList = PraiseList.getElementsByTagName("font");
@@ -514,7 +514,7 @@
 						if(data.RspCode == 0) {
 							var a = document.getElementById("praise" + index);
 							a.style.color = 'rgb(143, 143, 148)'
-							mui.toast('取消点赞成功');
+//							mui.toast('取消点赞成功');
 							var PraiseList = document.getElementById("PraiseList" + index);
 							var praiseName = PraiseList.getElementsByTagName("font")[0];
 							if(praiseName.innerHTML.indexOf('、') > -1) {
