调整资料获取备注

--- a/JiaoBaoYun-hb/html/mine/qun_manage_data_sub.html
+++ b/JiaoBaoYun-hb/html/mine/qun_manage_data_sub.html
@@ -312,7 +312,10 @@
 					} else {
 						mui.toast(data.RspTxt);
 					}
-					getBeiZhu(parList);
+
+					if(parList.length != 0) {
+						getBeiZhu(parList);
+					}
 					wd.close();
 				});
 			}
