--- a/JiaoBaoYun-hb/html/homework/publish-answer.html
+++ b/JiaoBaoYun-hb/html/homework/publish-answer.html
@@ -64,9 +64,14 @@
 		<script src="../../js/mui.zoom.js "></script>
 		<!--图片预览-->
 		<script src="../../js/mui.previewimage.js "></script>
+		<script src="../../js/libs/CryptoJS/rollups/tripledes.js"></script>
+		<script src="../../js/libs/CryptoJS/components/mode-ecb-min.js"></script>
+		<script src="../../js/utils/CloudFileUtil.js"></script>
+		<script src="../../js/qiniu/qiniu.js"></script>
 		<script src="../../js/utils/events.js"></script>
 		<script src="../../js/publicProtocol.js "></script>
-		<script src="../../js/publicHomeworkProtocol.js"></script>
+		<script src="../../js/utils/cryption.js"></script>
+		<script src="../../js/publicHomeworkProtocol.js"></script> 
 		<script src="../../js/homework/publish-answer.js"></script>
 	</body>
 
